[gd_scene load_steps=9 format=3 uid="uid://stp7fmywutg2"]

[ext_resource type="Texture2D" uid="uid://cuc6gsf55dm2t" path="res://Art/Demo/City/Gate.png" id="1_7ub7r"]
[ext_resource type="Script" path="res://Scripts/Door.gd" id="1_iy8d0"]
[ext_resource type="Texture2D" uid="uid://cu6y575pvs4v3" path="res://Art/Demo/City/Lock.png" id="2_m3f11"]
[ext_resource type="Texture2D" uid="uid://dx2rl7dvluoju" path="res://Art/UI/IconE.png" id="3_tm6qu"]
[ext_resource type="AudioStream" uid="uid://daqqp44p7u8fc" path="res://Sounds/FX/doorOpen.wav" id="5_uqi0s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbmb2"]
size = Vector2(942, 970)

[sub_resource type="Animation" id="Animation_125fe"]
resource_name = "Open"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1000)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lykyk"]
_data = {
"Open": SubResource("Animation_125fe")
}

[node name="Door" type="StaticBody2D"]
script = ExtResource("1_iy8d0")

[node name="GateSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_7ub7r")

[node name="LockSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_m3f11")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-496, 392, -496, 352, -424, 352, -424, 312, -360, 312, -360, 272, -328, 272, -328, -416, -72, -416, -72, 272, -40, 272, -40, 312, 24, 312, 24, 352, 96, 352, 96, 392)

[node name="IconE" type="Sprite2D" parent="."]
visible = false
position = Vector2(-199, -20)
texture = ExtResource("3_tm6qu")

[node name="DoorZone" type="Area2D" parent="."]
position = Vector2(-201, 155)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorZone"]
position = Vector2(6, -248)
shape = SubResource("RectangleShape2D_pbmb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lykyk")
}

[node name="OpenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_uqi0s")

[connection signal="body_entered" from="DoorZone" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DoorZone" to="." method="_on_area_2d_body_exited"]
